2009-06-22 Braden McDaniel  <braden@endoframe.com>

	* tests/browser.cpp: Current Boost no longer provides
	<boost/thread.hpp>.

2009-06-22 Braden McDaniel  <braden@endoframe.com>

	Use Spirit Classic in the boost::spirit::classic namespace.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/vrml97_grammar.h
	* src/libopenvrml/openvrml/x3d_vrml_grammar.h
	* src/libopenvrml/openvrml/local/parse_vrml.cpp
	* src/libopenvrml/openvrml/local/uri.cpp
	* src/libopenvrml/openvrml/local/uri.h

2009-06-22 Braden McDaniel  <braden@endoframe.com>

	Use GIO instead of GnomeVFS in openvrml-player.

	* configure.ac: Check for GIO.
	* src/Makefile.am
	(openvrml_player_openvrml_player_CXXFLAGS): Pass GIO_CFLAGS.
	(openvrml_player_openvrml_player_LDFLAGS): Pass GIO_LIBS.
	* src/openvrml-player/curlbrowserhost.cpp
	(openvrml_player_curl_browser_host_curl_write(void *, size_t,
	size_t, void *)): Use GIO to get the MIME media type.
	* src/openvrml-player/player.cpp
	(main(int, char *[])): Don't need to initialize GnomeVFS anymore.

2009-06-22 Braden McDaniel  <braden@endoframe.com>

	Use boost::shared_mutex instead of openvrml::read_write_mutex.

	* src/Makefile.am
	(openvrml_include_HEADERS): Removed read_write_mutex.h.
	(libopenvrml_libopenvrml_la_SOURCES): Removed read_write_mutex.cpp.
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/event.cpp
	* src/libopenvrml/openvrml/event.h
	* src/libopenvrml/openvrml/field_value.cpp
	* src/libopenvrml/openvrml/field_value.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/read_write_mutex.cpp: Removed.
	* src/libopenvrml/openvrml/read_write_mutex.h: Removed.
	* src/libopenvrml/openvrml/scene.cpp
	* src/libopenvrml/openvrml/scene.h
	* src/libopenvrml/openvrml/local/node_metatype_registry_impl.cpp
	* src/libopenvrml/openvrml/local/node_metatype_registry_impl.h